--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,7 @@ theme: jekyll-theme-cayman
 google_analytics: UA-163057908-1
 plugins:
   - jekyll-seo-tag
+  - jekyll-sitemap
+url: sufyanshk.github.io/generate_sqs
+author: Sufyan M. Shaikh
 title: generate_sqs
