--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-google_analytics: UA-163057908-1
+google_analytics: G-S556EWEVXE
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
