--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,5 @@
 theme: jekyll-theme-cayman
-#google_analytics: G-S556EWEVXE
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S556EWEVXE"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-S556EWEVXE');
-</script>
+google_analytics: G-S556EWEVXE
 plugins:
   - jekyll-seo-tag
   - jekyll-sitemap
